# Explore-Hms

./: .gitignore  DependecyBugList.txt  FAQ.docx  Hms Sandbox - Product Documentation.docx  README.md  SonarQubeSettings  Third Party Open Source Software Notice.docx  Third party licenses.docx  Version Change List.xlsx  app.jks  build.gradle  design.docx  gradle.properties  keystore.properties  settings.gradle  sonarqube.gradle  version.properties
FAQs/: @@faq_sm.txt  @faq_yep.docx  @faq_yk.docx  (+1 more)
feature_computergraphics/src/main/cpp/: CMakeLists.txt  Main.cpp  MainApplication.cpp
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Application/: CGKitInterface.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Application/Event/: InputEvent.h  KeyInputEvent.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Core/: Global.h  Macro.h  Singleton.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Log/: LogCommon.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Math/: AABB.h  Math.h  Matrix4.h  Plane.h  Quaternion.h  Vector3.h  Vector4.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Rendering/Model/: Mesh.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Resource/: ResourceManager.h
feature_computergraphics/src/main/cpp/include/CGRenderingFramework/Scene/: IComponent.h
feature_computergraphics/src/main/cpp/include/MainApplication/: MainApplication.h
feature_computergraphics/src/main/cpp/source/: Main.cpp  MainApplication.cpp
(+4466 files in other folders)
